config: install @nestjs/config and update .env

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-DATABASE_URL="postgresql://postgres:xzbDM9RHLkVn6u6X@db.rtsbnjeohnjuifszlucq.supabase.co:5432/postgres"
-DATABASE_URL_DEVELOPMENT="postgres://myuser:mypassword@localhost:5432/median-db"
+DATABASE_URL="postgres://myuser:mypassword@localhost:5432/median-db"
